--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "coding-test-ishaaq-ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.19",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.1"
-  }
+    "name": "coding-test-ishaaq-ts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "nodemon": "^2.0.19",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1"
+    }
 }
